deployment/k8s-configmap.yml
apiVersion: v1
kind: Namespace
metadata:
  name: flask-user-app-dev-namespace
