deployment/k8s-secret.yml
apiVersion: v1
kind: Namespace
metadata:
  name: flask-user-app-dev-namespace
