deployment/k8s-flask-deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: flask-user-app-dev-namespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-user-app
  namespace: flask-user-app-dev-namespace
spec:
  replicas: 4
  selector:
    matchLabels:
      app: flask-user-app
  template:
    metadata:
      labels:
        app: flask-user-app
    spec:
      automountServiceAccountToken: false
      containers:
      - name: flask-user-app
        image: harshilkansagara/flask_user_app:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: flask-user-app-service
  namespace: flask-user-app-dev-namespace
spec:
  selector:
    app: flask-user-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: LoadBalancer
