deployment/k8s-postgresql-statefulset-deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: flask-user-app-dev-namespace
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: flask-user-db
  namespace: flask-user-app-dev-namespace
spec:
  serviceName: flask-user-db-service
  replicas: 1
  selector:
    matchLabels:
      app: flask-user-db
  template:
    metadata:
      labels:
        app: flask-user-db
    spec:
      automountServiceAccountToken: false
      containers:
      - name: flask-user-db
        image: postgres:15
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: flask-user-db-storage
          mountPath: /var/lib/postgresql/data
        livenessProbe:
          exec:
            command: ["pg_isready", "-U", "postgres", "-h", "localhost"] # Use localhost for probe
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 6
        readinessProbe:
          exec:
            command: ["pg_isready", "-U", "postgres", "-h", "localhost"] # Use localhost for probe
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
  volumeClaimTemplates:
    - metadata:
        name: flask-user-db-storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: flask-user-db-service
  namespace: flask-user-app-dev-namespace
spec:
  selector:
    app: flask-user-db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
